fix music service logos being too big

--- a/css/main.scss
+++ b/css/main.scss
@@ -133,6 +133,14 @@ html, body {
 		overflow-x: hidden;
 }
 
+#musiclogos {
+	 line-height: 0;
+}
+
+#musiclogos img {
+	 width: 30%;
+}
+
 //Album section
 #photos {
 	 line-height: 0;
